# product-pos-backend

./: .gitignore  Dockerfile  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
abstract_classes/: abstract_view.py
api_logic/: view_logic.py
core/: dev_settings.py  settings.py  urls.py
product_app/: models.py  serializers.py  urls.py  views.py
product_app/migrations/: 0001_initial.py
shared/apps/product_app/: apps.py  models.py  serializers.py  urls.py  views.py
shared/apps/product_app/factories/: product_object_factory.py
shared/apps/product_app/migrations/: 0001_initial.py
shared/base_views/: generic_views.py  generic_viewsets.py
shared/configs/: view_config.py
shared/factories/: generic_views.py  object_factory.py  view_factory.py
shared/interfaces/: view_interface.py
shared/utils/: custom_routers.py
src/core/: settings.py
src/product_app/: apps.py
store_app/: models.py  serializers.py  urls.py  views.py
store_app/migrations/: 0001_initial.py  0002_remove_order_order_total_orderitem_alter_order_items.py
store_app/store_factories/: store_object_factory.py  store_view_factory.py
store_app/store_views/: order_views.py
utils/: api_utils.py
