[tool.poetry]
name = "product-pos-backend"
version = "0.1.0"
description = "Backend of the product POS"
authors = ["Lemuel Guevara <lemueljohn.guevara@gmail.com>"]
readme = "README.md"
packages = [{include = "product_pos_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
djangorestframework = "^3.14.0"
requests = "^2.31.0"
dj-database-url = "^2.0.0"
django-cors-headers = "^4.1.0"
djangorestframework-simplejwt = "^5.2.2"
psycopg2-binary = "^2.9.6"
watchdog = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
